# lab2.2-roman

./: .clang-tidy  .gitignore  CMakeLists.txt  justfile
.github/workflow/: ci.yml
include/: dynamic_array.hpp  linked_list.hpp
tests/: dyn_arr_test.cpp  linked_list_test.cpp
